fix(css): minor alignment fix

--- a/CCK.Debugger/Resources/UIResources/index.css
+++ b/CCK.Debugger/Resources/UIResources/index.css
@@ -121,7 +121,7 @@ html, body {
     background-position: center;
     text-align: center;
     margin: 10px 0 10px 0;
-    padding-right: 2.5em;
+    padding-right: 2.6em;
 }
 
 .cck-debugger-section-root {
